# counter_diabatic

./: CLAUDE.md  README.md  conmu.ipynb  essay.ipynb  pulse_hamil.py  pyproject.toml  sequence_2_matrix.py  utils_test.py
.github/workflows/: ci.yml
src/counter_diabatic/: __init__.py  pulse_hamil.py  sequence_2_matrix.py  utils_.py  utils_test.py
test/: test_integration.py  test_sequence_2_matrix.py  utils_test.py
